--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                File-Maintenance
-version:             0.02
+version:             0.03
 abstract:            Maintain files based on their age.
 license:             ~
 author:              
@@ -15,6 +15,9 @@ requires:
     File::Find::Rule:              0
     File::Path:                    0
     File::Stat::OO:                0
+    IO::Compress::Bzip2:           2.012
+    IO::Compress::Gzip:            2.012
+    IO::Compress::Zip:             2.012
     Test::More:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
